--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+corridor (0:10.0.0-3) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Sun, 31 Jul 2016 19:14:42 +0000
+
 corridor (0:0.10.0-2) unstable; urgency=medium
 
   * New upstream version (local package).
