--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+corridor (1:0.11.1-1) UNRELEASED; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Sat, 10 Dec 2016 02:05:59 +0000
+
 corridor (0:10.0.0-3) unstable; urgency=medium
 
   * New upstream version (local package).
