--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-corridor (1:0.11.1-1) UNRELEASED; urgency=medium
+corridor (1:0.11.4-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Sat, 10 Dec 2016 02:05:59 +0000
+ -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 12 Jan 2017 02:54:12 +0000
 
 corridor (0:10.0.0-3) unstable; urgency=medium
 
