--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+corridor (1:0.11.6-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Fri, 17 Feb 2017 13:57:00 +0000
+
 corridor (1:0.11.5-1) unstable; urgency=medium
 
   * New upstream version (local package).
