--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+corridor (1:0.11.9-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 04 Apr 2019 14:03:49 +0000
+
 corridor (1:0.11.8-1) unstable; urgency=medium
 
   * New upstream version (local package).
