--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+corridor (1:0.11.11-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Fri, 24 May 2019 20:37:43 +0000
+
 corridor (1:0.11.10-1) unstable; urgency=medium
 
   * New upstream version (local package).
