--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+corridor (1:0.11.12-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Sat, 08 Jun 2019 11:09:02 +0000
+
 corridor (1:0.11.11-1) unstable; urgency=medium
 
   * New upstream version (local package).
