--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+corridor (1:0.11.13-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 01 Aug 2019 11:36:26 +0000
+
 corridor (1:0.11.12-1) unstable; urgency=medium
 
   * New upstream version (local package).
