--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+corridor (1:0.11.14-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 28 Nov 2019 08:15:36 +0000
+
 corridor (1:0.11.13-1) unstable; urgency=medium
 
   * New upstream version (local package).
