--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+corridor (1:0.11.15-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 12 Dec 2019 13:05:29 +0000
+
 corridor (1:0.11.14-1) unstable; urgency=medium
 
   * New upstream version (local package).
