--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+corridor (1:0.11.17-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Fri, 17 Jan 2020 08:45:34 +0000
+
 corridor (1:0.11.16-1) unstable; urgency=medium
 
   * New upstream version (local package).
