--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+corridor (1:0.11.21-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 02 Apr 2020 16:32:41 +0000
+
 corridor (1:0.11.20-1) unstable; urgency=medium
 
   * New upstream version (local package).
