--- a/debian/changelog
+++ b/debian/changelog
@@ -2,143 +2,143 @@ corridor (1:0.11.22-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 16 Apr 2020 12:28:30 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Thu, 16 Apr 2020 12:28:30 +0000
 
 corridor (1:0.11.21-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 02 Apr 2020 16:32:41 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Thu, 02 Apr 2020 16:32:41 +0000
 
 corridor (1:0.11.20-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 02 Apr 2020 11:41:02 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Thu, 02 Apr 2020 11:41:02 +0000
 
 corridor (1:0.11.19-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Wed, 01 Apr 2020 14:33:49 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Wed, 01 Apr 2020 14:33:49 +0000
 
 corridor (1:0.11.18-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Fri, 17 Jan 2020 16:45:45 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Fri, 17 Jan 2020 16:45:45 +0000
 
 corridor (1:0.11.17-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Fri, 17 Jan 2020 08:45:34 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Fri, 17 Jan 2020 08:45:34 +0000
 
 corridor (1:0.11.16-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Fri, 17 Jan 2020 08:21:43 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Fri, 17 Jan 2020 08:21:43 +0000
 
 corridor (1:0.11.15-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 12 Dec 2019 13:05:29 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Thu, 12 Dec 2019 13:05:29 +0000
 
 corridor (1:0.11.14-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 28 Nov 2019 08:15:36 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Thu, 28 Nov 2019 08:15:36 +0000
 
 corridor (1:0.11.13-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 01 Aug 2019 11:36:26 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Thu, 01 Aug 2019 11:36:26 +0000
 
 corridor (1:0.11.12-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Sat, 08 Jun 2019 11:09:02 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sat, 08 Jun 2019 11:09:02 +0000
 
 corridor (1:0.11.11-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Fri, 24 May 2019 20:37:43 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Fri, 24 May 2019 20:37:43 +0000
 
 corridor (1:0.11.10-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Sun, 12 May 2019 10:37:09 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sun, 12 May 2019 10:37:09 +0000
 
 corridor (1:0.11.9-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 04 Apr 2019 14:03:49 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Thu, 04 Apr 2019 14:03:49 +0000
 
 corridor (1:0.11.8-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Mon, 27 Aug 2018 16:36:02 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Mon, 27 Aug 2018 16:36:02 +0000
 
 corridor (1:0.11.7-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 01 Feb 2018 15:00:33 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Thu, 01 Feb 2018 15:00:33 +0000
 
 corridor (1:0.11.6-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Fri, 17 Feb 2017 13:57:00 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Fri, 17 Feb 2017 13:57:00 +0000
 
 corridor (1:0.11.5-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Sun, 15 Jan 2017 15:29:34 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sun, 15 Jan 2017 15:29:34 +0000
 
 corridor (1:0.11.4-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 12 Jan 2017 02:54:12 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Thu, 12 Jan 2017 02:54:12 +0000
 
 corridor (0:10.0.0-3) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Sun, 31 Jul 2016 19:14:42 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sun, 31 Jul 2016 19:14:42 +0000
 
 corridor (0:0.10.0-2) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Sat, 30 Jul 2016 17:37:02 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sat, 30 Jul 2016 17:37:02 +0000
 
 corridor (0:0.10.0-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Sat, 23 Jul 2016 14:09:00 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sat, 23 Jul 2016 14:09:00 +0000
 
 corridor (0:0.9.2-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Sun, 03 Jul 2016 16:23:10 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sun, 03 Jul 2016 16:23:10 +0000
 
 corridor (0:0.9.1-1) unstable; urgency=low
 
   * Initial release.
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Sun, 03 Jul 2016 16:22:46 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sun, 03 Jul 2016 16:22:46 +0000
