--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+corridor (1:0.11.24-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Thu, 18 Mar 2021 11:42:33 +0000
+
 corridor (1:0.11.23-1) unstable; urgency=medium
 
   * New upstream version (local package).
