--- a/man/corridor.8
+++ b/man/corridor.8
@@ -109,7 +109,7 @@ https://github\.com/rustybird/corridor
 This package is produced independently of, and carries no guarantee from, The Tor Project\.
 .
 .SH "AUTHOR"
-This man page has been written by Patrick Schleizer (adrelanos@riseup\.net)\.
+This man page has been written by Patrick Schleizer (adrelanos@whonix\.org)\.
 .
 .P
 corridor has been written by Rusty Bird (rustybird@net-c\.com)\.
