--- a/auto-generated-man-pages/corridor.8
+++ b/auto-generated-man-pages/corridor.8
@@ -70,6 +70,6 @@ https://github\.com/rustybird/corridor
 .SH "DISCLAIMER"
 This package is produced independently of, and carries no guarantee from, The Tor Project\.
 .SH "AUTHOR"
-This man page has been written by Patrick Schleizer (adrelanos@riseup\.net)\.
+This man page has been written by Patrick Schleizer (adrelanos@whonix\.org)\.
 .P
 corridor has been written by Rusty Bird (rustybird@net\-c\.com)\.
