--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+corridor (1:0.11.25-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Thu, 18 Mar 2021 13:01:27 +0000
+
 corridor (1:0.11.24-1) unstable; urgency=medium
 
   * New upstream version (local package).
