re-generate man pages (generated using "genmkfile manpages")

--- a/auto-generated-man-pages/corridor.8
+++ b/auto-generated-man-pages/corridor.8
@@ -1,11 +1,9 @@
-.\" generated with Ronn-NG/v0.8.0
-.\" http://github.com/apjanke/ronn-ng/tree/0.8.0
-.TH "CORRIDOR" "8" "April 2020" "corridor" "corridor Manual"
+.\" generated with Ronn-NG/v0.9.1
+.\" http://github.com/apjanke/ronn-ng/tree/0.9.1
+.TH "CORRIDOR" "8" "January 2020" "corridor" "corridor Manual"
+
 .SH "NAME"
 \fBcorridor\fR \- Tor traffic whitelisting gateway
-.P
-.P
-.P
 .SH "SYNOPSIS"
 \fBcorridor\-data\fR
 .P
@@ -53,11 +51,12 @@ Sanity test for the configuration folders\. Also internally used by corridor\.
 .P
 \fBcorridor\-load\-config\fR
 .SH "corridor\-stop\-forwarding"
-.SH "corridor\-stop\-snat"
+## corridor\-stop\-snat
+.P
 Stop actions\.
 .SH "corridor\-load\-ipset"
-.SH "corridor\-load\-ipset\-logged"
-.SH "corridor\-load\-ipset\-relays"
+## corridor\-load\-ipset\-logged ## corridor\-load\-ipset\-relays
+.P
 Internally used by corridor\.
 .SH "EXIT STATUS"
 \fI0\fR Success\.
