--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+corridor (1:0.11.25-2) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Thu, 05 Aug 2021 20:38:42 +0000
+
 corridor (1:0.11.25-1) unstable; urgency=medium
 
   * New upstream version (local package).
