--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+corridor (1:0.11.25-3) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sat, 11 Sep 2021 22:38:51 +0000
+
 corridor (1:0.11.25-2) unstable; urgency=medium
 
   * New upstream version (local package).
