--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+corridor (2:0.11.8.1-2) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sun, 12 Sep 2021 15:27:06 +0000
+
 corridor (2:0.11.8.1-1) unstable; urgency=medium
 
   * New upstream version (local package).
