--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+corridor (2:0.11.8.5-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Wed, 14 Jun 2023 13:10:08 +0000
+
 corridor (2:0.11.8.4-1) unstable; urgency=medium
 
   * New upstream version (local package).
