--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,12 @@ corridor (2:0.11.8.5-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
+ -- Patrick Schleizer <adrelanos@whonix.org>  Fri, 16 Jun 2023 11:28:16 +0000
+
+corridor (2:0.11.8.5-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
  -- Patrick Schleizer <adrelanos@whonix.org>  Wed, 14 Jun 2023 13:10:08 +0000
 
 corridor (2:0.11.8.4-1) unstable; urgency=medium
