--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+corridor (2:0.11.8.7-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Wed, 21 Jun 2023 09:42:55 +0000
+
 corridor (2:0.11.8.6-1) unstable; urgency=medium
 
   * New upstream version (local package).
