--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+corridor (2:0.11.9.0-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Fri, 24 Jan 2025 13:24:40 +0000
+
 corridor (2:0.11.8.10-1) unstable; urgency=medium
 
   * New upstream version (local package).
