--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+corridor (2:0.11.9.0.1-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sun, 26 Jan 2025 09:42:22 +0000
+
 corridor (2:0.11.9.0-1) unstable; urgency=medium
 
   * New upstream version (local package).
